--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <hr>
       <div class="row text-center">
         <div class="col-md-6">
-          <p>This project is made by Aniket #2021 at GRIP.</p>
+          <p>This project is made by Rahul #2022.</p>
           
         </div>
         <div class="col-md-6 text-center">
