--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="col-md-6 text-center">
             <ul class="social-icons">
               Contact Me:
-              <li><a target="_blank" class="github" href="https://github.com/Aniket0912-ai"><i class="fab fa-github fa-2x"></i></a></li>
+              <li><a target="_blank" class="github" href="https://github.com/Rahul-Kuttarmare"><i class="fab fa-github fa-2x"></i></a></li>
               
-              <li><a target="_blank" class="linkedin" href="https://www.linkedin.com/in/aniket-brahmankar-962552218/"><i class="fab fa-linkedin fa-2x"></i></a></li>   
+              <li><a target="_blank" class="linkedin" href="https://www.linkedin.com/in/rahul-kuttarmare-643752260/"><i class="fab fa-linkedin fa-2x"></i></a></li>   
             </ul>
         </div>
       </div>
